--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -290,6 +290,7 @@ set(HEADER_FILES
   DeviceArgument.h
   DeviceInterface.h
   EarlyFree.h
+  Elf.h
   EliminateBoolVectors.h
   Error.h
   Expr.h
@@ -437,6 +438,7 @@ add_library(Halide ${HALIDE_LIBRARY_TYPE}
   DeviceArgument.cpp
   DeviceInterface.cpp
   EarlyFree.cpp
+  Elf.cpp
   EliminateBoolVectors.cpp
   Error.cpp
   FastIntegerDivide.cpp
