Add a reusable set of Generator rules for Make
Former-commit-id: e155653db8bc3db67289f90e1c7380ac81ca9e91

--- a/apps/bilateral_grid/Makefile
+++ b/apps/bilateral_grid/Makefile
@@ -1,26 +1,30 @@
 include ../support/Makefile.inc
 
-all: $(BIN)/filter
+GENERATOR_BIN_DIR = $(BIN)
+GENERATOR_TARGET = $(HL_TARGET)
 
-$(BIN)/bilateral_grid_exec: bilateral_grid_generator.cpp $(GENERATOR_DEPS)
-	@mkdir -p $(@D)
-	$(CXX) $(CXXFLAGS) -g -fno-rtti $(filter-out %.h,$^) -o $@ $(LDFLAGS) $(HALIDE_SYSTEM_LDFLAGS)
+GENERATOR_GENERATOR_LD_FLAGS = $(LDFLAGS) $(HALIDE_SYSTEM_LDFLAGS)
+GENERATOR_CXX_FLAGS = $(CXXFLAGS)
+GENERATOR_HALIDE_TOOLS_DIR = $(HALIDE_SRC_PATH)/tools
+GENERATOR_HALIDE_INCLUDES_DIR = $(HALIDE_SRC_PATH)/include
+GENERATOR_LIBHALIDE_PATH = $(LIB_HALIDE)
 
-$(BIN)/bilateral_grid.a: $(BIN)/bilateral_grid_exec
-	@mkdir -p $(@D)
-	$^ -o $(BIN)  target=$(HL_TARGET)
+include ../../HalideGenerator.mk
 
-$(BIN)/viz/bilateral_grid.a: $(BIN)/bilateral_grid_exec
-	@mkdir -p $(@D)
-	@mkdir -p $(@D)
-	$^ -o $(BIN)/viz target=$(HL_TARGET)-trace_loads-trace_stores-trace_realizations
+all: $(BIN)/filter $(BIN)/out.png $(BIN)/filter_viz 
 
-$(BIN)/filter: $(BIN)/bilateral_grid.a filter.cpp
+# Same Generator, different features
+$(GENERATOR_FILTERS_DIR)/bilateral_grid_viz.a: GENERATOR_GENERATOR_EXECUTABLE=$(GENERATOR_BIN_DIR)/bilateral_grid.generator
+$(GENERATOR_FILTERS_DIR)/bilateral_grid_viz.a: GENERATOR_FEATURES=trace_loads-trace_stores-trace_realizations
+$(GENERATOR_FILTERS_DIR)/bilateral_grid_viz.a: GENERATOR_FUNCNAME=bilateral_grid
+
+$(BIN)/filter: filter.cpp $(GENERATOR_FILTERS_DIR)/bilateral_grid.a $(GENERATOR_RUNTIME_LIB)
 	@mkdir -p $(@D)
-	$(CXX) $(CXXFLAGS) -O3 -ffast-math -Wall -Werror -I$(BIN) filter.cpp $(BIN)/bilateral_grid.a -o $@ $(IMAGE_IO_FLAGS) $(LDFLAGS)
-$(BIN)/filter_viz: $(BIN)/viz/bilateral_grid.a filter.cpp
+	$(CXX) $(CXXFLAGS) -O3 -ffast-math -Wall -Werror -I$(GENERATOR_FILTERS_DIR) $^ -o $@ $(IMAGE_IO_FLAGS) $(LDFLAGS)
+
+$(BIN)/filter_viz: filter.cpp $(GENERATOR_FILTERS_DIR)/bilateral_grid_viz.a $(GENERATOR_RUNTIME_LIB)
 	@mkdir -p $(@D)
-	$(CXX) $(CXXFLAGS) -O3 -ffast-math -Wall -Werror -I$(BIN)/viz filter.cpp $(BIN)/viz/bilateral_grid.a -o $@ $(IMAGE_IO_FLAGS) $(LDFLAGS)
+	$(CXX) $(CXXFLAGS) -O3 -ffast-math -Wall -Werror -I$(GENERATOR_FILTERS_DIR) $^ -o $@ $(IMAGE_IO_FLAGS) $(LDFLAGS)
 
 $(BIN)/bilateral_grid.mp4: $(BIN)/filter_viz viz.sh
 	@mkdir -p $(@D)
