WIP dynamic_shuffle for NEON.
Former-commit-id: 938819366b83ea6443da0b0744f8b508a279cd27
Former-commit-id: e8161b67a92be688db87655d4a15d889827499f3

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -278,6 +278,7 @@ set(HEADER_FILES
   Deinterleave.h
   DeviceArgument.h
   DeviceInterface.h
+  DynamicShuffle.h
   EarlyFree.h
   Elf.h
   EliminateBoolVectors.h
@@ -434,6 +435,7 @@ add_library(Halide ${HALIDE_LIBRARY_TYPE}
   Deinterleave.cpp
   DeviceArgument.cpp
   DeviceInterface.cpp
+  DynamicShuffle.cpp
   EarlyFree.cpp
   Elf.cpp
   EliminateBoolVectors.cpp
