Add TestRunner harness, pt 1
Former-commit-id: 5c5487e58c09ca14014ce760281a806411fdbadc
Former-commit-id: d7638b98cdfdeebb4e2c360d2b697ca03458f222

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,23 +31,32 @@ function(tests folder)
   foreach(file ${TESTS})
     string(REPLACE ".cpp" "" name "${file}")
 
-    set(TARGET "build_${folder}_${name}")
-    halide_project("${TARGET}" "${folder}" "${folder}/${file}")
-    list(APPEND TEST_NAMES "${TARGET}")
-    target_include_directories("${TARGET}" PRIVATE "${CMAKE_SOURCE_DIR}")
-    target_compile_definitions("${TARGET}"  PRIVATE "-DLLVM_VERSION=${LLVM_VERSION}")
+    set(PUBLIC_TARGET "${folder}_${name}")
 
-    add_to_group(build_tests "${TARGET}" BUILD)
+    set(BUILDER_TARGET "build_${PUBLIC_TARGET}")
+    halide_project("${BUILDER_TARGET}" "${folder}" "${folder}/${file}")
+    list(APPEND TEST_NAMES "${BUILDER_TARGET}")
+    target_include_directories("${BUILDER_TARGET}" PRIVATE "${CMAKE_SOURCE_DIR}")
+    target_compile_definitions("${BUILDER_TARGET}"  PRIVATE "-DLLVM_VERSION=${LLVM_VERSION}")
+
+    add_to_group(build_tests "${BUILDER_TARGET}" BUILD)
+
+    set(TMPDIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
     if("${folder}" STREQUAL "error")
-      set(EXPECT_FAILURE "${CMAKE_CURRENT_SOURCE_DIR}/common/expect_failure.sh")
-      add_custom_target("${folder}_${name}"
-                        COMMAND "${EXPECT_FAILURE}" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${TARGET}"
-                        DEPENDS "${TARGET}")
-      add_dependencies("${folder}_${name}" "${TARGET}")
+      set(TEST_RUNNER_ARGS --error)
+    elseif("${folder}" STREQUAL "warning")
+      set(TEST_RUNNER_ARGS --warning)
     else()
-      add_to_group(${folder}_${name} "${TARGET}" EXECUTE)
+      set(TEST_RUNNER_ARGS --success --echo_output)
     endif()
-    add_to_group(test_${folder} "${folder}_${name}" EXECUTE)
+    set(TEST_RUNNER_TARGET "test_runner_${PUBLIC_TARGET}")
+    add_custom_target(${TEST_RUNNER_TARGET}
+                      COMMAND TestRunner ${TEST_RUNNER_ARGS} --dir "${TMPDIR}" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${BUILDER_TARGET}"
+                      DEPENDS "${BUILDER_TARGET}")
+    add_dependencies(${TEST_RUNNER_TARGET} "${BUILDER_TARGET}")
+    add_to_group(${PUBLIC_TARGET} "${TEST_RUNNER_TARGET}" EXECUTE)
+    # add_to_group(${PUBLIC_TARGET} "${BUILDER_TARGET}" EXECUTE)
+    add_to_group(test_${folder} ${PUBLIC_TARGET} EXECUTE)
   endforeach()
   set(TEST_NAMES "${TEST_NAMES}" PARENT_SCOPE)
 endfunction(tests)
