--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -1,3 +1,6 @@
 halide_project(HalideTraceViz "utils" HalideTraceViz.cpp HalideTraceUtils.cpp)
+
 halide_project(HalideTraceDump "utils" HalideTraceDump.cpp HalideTraceUtils.cpp)
 halide_use_image_io(HalideTraceDump)
+
+add_executable(TestRunner TestRunner.cpp)
